5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1671_1100.log
== TEST (2019-04-28 14:23:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 8
    elif(x==5)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:23:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.133278
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 8
    elif(x==5)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:23:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 8
    elif(x==5)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:24:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.165538
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 8
    elif(x==5)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:24:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
	print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.142342
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 8
    elif (x==5)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:24:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
	print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 8
    elif (x==5)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:24:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.134099
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:24:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:26:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.204785
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:26:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:26:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.200668
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:27:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:27:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:27:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.139977
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:27:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:27:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Peixe")
-- EXECUTION TIME:
0.140685
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:28:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:28:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Garoupa")
-- EXECUTION TIME:
0.201231
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:28:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:29:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Garoupa")
-- EXECUTION TIME:
0.129331
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:36:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5)
 print("Animal: Garca")
elif(x==10)
 print("Animal: Arara")
elif(x==20)
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:37:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50)
 print("Animal: Onca-pintada")
elif(x==100)
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:38:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- EXECUTION TIME:
0.203213
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:38:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:38:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:38:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- ERROR:
File "XXXX", line 7
    print("Animal: Tartaruga")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:38:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
 print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- EXECUTION TIME:
0.179405
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:38:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
 print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:38:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
 print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:38:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
 print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- EXECUTION TIME:
0.158829
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:40:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
 print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- EXECUTION TIME:
0.191969
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Valor da cedula:Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Valor da cedula:Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Valor da cedula:Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:40:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
 print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal:Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:40:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("Valor da cedula:"))
print("Entrada:" , x)
if (x==2):
 print("Animal: Tartaruga")
elif (x==5):
 print("Animal: Garca")
elif(x==10):
 print("Animal: Arara")
elif(x==20):
 print("Animal: Mico-leao-dourado")
elif(x==50):
 print("Animal: Onca-pintada")
elif(x==100):
 print("Animal: Garoupa")
else:
 print("Animal: Invalido")
-- EXECUTION TIME:
0.147103
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
